# memimpopk

./: .gitignore  LICENSE  README.md  test_setup.sh
code/: 01_explore_ibs.py  02_run_ibd.sh  03_run_ancestry.sh  04_plot_painting.py  05_paint_pedigree.sh  06_plot_pedigree_painting.py  07_plot_posteriors.py  _svgplot.py
data/: ground_truth_tracts.tsv  pedigree_populations.tsv  pedigree_queries.txt  populations.tsv  queries.txt
presentation/: slides.tex
source/: Cargo.toml  README.md
source/src/: README.md
source/src/ancestry-cli/: Cargo.toml  README.md
source/src/ancestry-cli/src/: ancestry.rs  concordance.rs  demography.rs  egrm.rs  hmm.rs  lib.rs  main.rs  params.rs  rfmix.rs  validation.rs
source/src/ancestry-cli/tests/: adaptive_pairwise_tests.rs  agreement_pairwise_edge_tests.rs  agreement_pairwise_tests.rs  algo_dev_cycle1_edge_tests.rs  ancestry_edge_cases.rs  ancestry_invariant_and_consistency_tests.rs  asymmetric_bw_stress_tests.rs  auto_configure_stress_tests.rs  auto_detect_groups_integration_tests.rs  baum_welch_and_genmap_edge_tests.rs  baum_welch_full_tests.rs  boundary_condition_tests.rs  boundary_refinement_tests.rs  bw_convergence_and_estimation_tests.rs  cli.rs  cli_validators.rs  concordance_multipop_format_tests.rs  concordance_report_tests.rs  concordance_tests.rs  consistency_emission_tests.rs  copying_model_and_posterior_smooth_tests.rs  coverage_edge_cases.rs  coverage_genmap_and_lod_tests.rs  create_segment_and_emission_edge_tests.rs  cross_validation_tests.rs  cycle35_66_edge_tests.rs  cycle68_edge_tests.rs  cycle82_copying_diploid_edge_tests.rs  cycle85_concordance_interval_deep_edge_tests.rs  cycle85_demography_persample_tsv_format_tests.rs  cycle86_emission_transform_zero_coverage_tests.rs  cycle86_state_transition_blend_zero_coverage_tests.rs  cycle88_low_coverage_deep_edge_tests.rs  cycle89_signal_emission_transform_tests.rs  cycle89_transition_posterior_edge_tests.rs  cycle90_medium_coverage_deep_tests.rs  cycle92_rfmix_parse_tests.rs  deconvolution_tests.rs  deep_edge_case_tests.rs  demography_edge_tests.rs  (+52 more)
source/src/common/: Cargo.toml
source/src/common/src/: lib.rs
source/src/common/tests/: cycle88_window_region_column_tests.rs  cycle92_display_parse_roundtrip_tests.rs  edge_case_tests.rs  property_and_roundtrip_tests.rs
source/src/ibd-cli/: Cargo.toml  README.md
source/src/ibd-cli/docs/: conceptualization.md
source/src/ibd-cli/src/: concordance.rs  hapibd.rs  hmm.rs  lib.rs  main.rs  segment.rs  stats.rs
source/src/ibd-cli/tests/: adaptive_pipeline_tests.rs  aux_emission_and_coverage_tests.rs  baum_welch_and_transition_edge_tests.rs  boundary_condition_tests.rs  boundary_refinement_stress_tests.rs  boundary_refinement_tests.rs  bw_convergence_and_pipeline_tests.rs  bw_parameter_bounds_tests.rs  bw_training_and_distance_roundtrip_tests.rs  cli.rs  cli_validators.rs  concordance_advanced_tests.rs  concordance_boundary_merge_tests.rs  concordance_tests.rs  contrast_normalize_edge_tests.rs  contrast_normalize_tests.rs  cycle83_ibd_hmm_coverage_tests.rs  cycle84_segment_concordance_deep_edge_tests.rs  cycle87_k0_adaptive_composite_tests.rs  cycle90_genmap_forward_summary_tests.rs  cycle91_genmap_k0_distance_tests.rs  cycle92_hapibd_segment_refine_tests.rs  deep_branch_edge_tests.rs  distance_hmm_and_concordance_tests.rs  distance_logit_and_stats_tests.rs  em_stats_and_segment_dist_tests.rs  emission_smoothing_tests.rs  estimate_emissions_tests.rs  gap_bridging_tests.rs  genetic_map_and_combined_filter_tests.rs  genetic_map_hmm_tests.rs  hapibd_filtering_tests.rs  hapibd_tests.rs  haplotype_concordance_tests.rs  hmm_invariant_and_consistency_tests.rs  hmm_roundtrip_tests.rs  hmm_tests.rs  inference_and_numerical_tests.rs  integration_and_numerical_edge_tests.rs  k0_and_coverage_edge_tests.rs  (+26 more)
source/src/ibs-cli/: Cargo.toml  PERFORMANCE_REPORT.md  README.md
source/src/ibs-cli/examples/: IBS.txt  ibs.sim
source/src/ibs-cli/src/: agc_access.rs  cigar_reconstruct.rs  lib.rs  main.rs  paf.rs  spatial_index.rs
source/src/ibs-cli/tests/: bed_and_validator_gaps.rs  cli.rs  cli_validators.rs  cycle87_paf_parsing_edge_tests.rs  edge_case_tests.rs  filtered_row_and_region_tests.rs  paf_io_and_edge_tests.rs  query_ref_filter_tests.rs
source/src/jacquard-cli/: Cargo.toml  README.md
source/src/jacquard-cli/src/: main.rs
source/src/jacquard-cli/tests/: advanced_edge_cases.rs  classify_locus_and_pair_tests.rs  classify_locus_property_tests.rs  cli.rs  cli_edge_cases.rs  load_records_tests.rs  parity.rs  run_flow_and_validation_tests.rs
source/src/jacquard-cli/tests/data/: jacquard_delta1.tsv  jacquard_delta7.tsv  jacquard_delta9.tsv  jacquard_toy.tsv
source/src/jacquard-cli/tests/parity/: jacquard.toml
tutorial/: tutorial.tex
