[workspace]
resolver = "2"
members = [
    "src/common",
    "src/ibd-cli",
    "src/ibs-cli",
    "src/jacquard-cli",
    "src/ancestry-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Franco Marsico"]
license = "MIT"
repository = "https://github.com/MarsicoFL/IMPOPk"
description = "impopk: IBD detection and local ancestry inference from pangenome alignments"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
