[package]
name = "impopk-ancestry-cli"
version = "0.1.0"
edition = "2021"
authors = ["Franco Marsico"]
description = "Local ancestry inference using HMM for pangenome data"
license = "MIT"

[lib]
name = "impopk_ancestry_cli"
path = "src/lib.rs"

[[bin]]
name = "ancestry"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
impopk-common = { path = "../common" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
