[package]
name = "impopk-ibs"
version = "0.1.0"
edition = "2021"
authors = ["Franco Marsico"]
description = "IBS window computation for impopk — wraps impg similarity"
license = "MIT"
keywords = ["bioinformatics", "pangenome", "IBS", "HPRC"]
categories = ["science", "command-line-utilities"]

[lib]
name = "impopk_ibs"
path = "src/lib.rs"

[[bin]]
name = "ibs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
impopk-common = { path = "../common" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
